--- a/templates/expenses/edit-verification.html
+++ b/templates/expenses/edit-verification.html
@@ -11,7 +11,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>Nämnd</th>
+                    <th>Resultatställe</th>
                     <th>Kostnadsställe</th>
                     <th>Budgetpost</th>
                     <th>Summa</th>
