--- a/templates/expenses/edit.html
+++ b/templates/expenses/edit.html
@@ -89,7 +89,7 @@
                                 <option value="0">- Välj -</option>
                                 <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'old')"
                                         :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
-                                <optgroup label="Nämnder">
+                                <optgroup label="Resultatställen">
                                     <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'committee')"
                                             :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
                                 </optgroup>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="select disabled" v-else>
                             <select name="secondaryCostCentres[]" required disabled>
-                                <option value="0">- Välj nämnd först -</option>
+                                <option value="0">- Välj resultatställe först -</option>
                             </select>
                         </div>
                     </div>
