--- a/templates/expenses/show.html
+++ b/templates/expenses/show.html
@@ -30,7 +30,7 @@
             Belopp
           </th>
           <th>
-            Nämnd
+            Resultatställe
           </th>
           <th>
             Sekundärt resultatställe
