--- a/templates/invoices/show.html
+++ b/templates/invoices/show.html
@@ -39,7 +39,7 @@
                     Belopp
                 </th>
                 <th>
-                    Nämnd
+                    Resultatställe
                 </th>
                 <th>
                     Sekundärt resultatställe
@@ -65,7 +65,7 @@
                     <span class="value">{{ invoice_part.secondary_cost_centre }}</span>
                 </td>
                 <td>
-                    <span class="value">{{ invoice_part.budget_line_name }}</span>
+                    <span class="value">{{ invoice_part.budget_line }}</span>
                 </td>
                 <td>
                     {% if invoice_part.attested_by %}
