--- a/templates/admin/pay/overview.html
+++ b/templates/admin/pay/overview.html
@@ -16,7 +16,7 @@
     </div>
     <div class="select" style="margin-left: 10px;float:right">
         <select v-model="cost_centre">
-            <option :value="false">Filtrera på nämnd</option>
+            <option :value="false">Filtrera på resultatställe</option>
             <option v-for="cost_centre in cost_centres" v-text="cost_centre + ' (' + expenses.filter(x => x.cost_centres.indexOf(cost_centre) > -1).length + ' + ' + invoices.filter(x => x.cost_centres.indexOf(cost_centre) > -1).length + ')'" :value="cost_centre"></option>
         </select>
     </div>
@@ -64,7 +64,7 @@
         <thead>
             <tr>
                 <th>Beskrivning</th>
-                <th>Nämnder</th>
+                <th>Resultatställen</th>
                 <th>Belopp</th>
             </tr>
         </thead>
