Unfix the small (not-)bugfixes

--- a/templates/expenses/edit-verification.html
+++ b/templates/expenses/edit-verification.html
@@ -12,7 +12,7 @@
             <thead>
                 <tr>
                     <th>Resultatställe</th>
-                    <th>Kostnadsställe</th>
+                    <th>Sek. resultatställe</th>
                     <th>Budgetpost</th>
                     <th>Summa</th>
                 </tr>
