--- a/templates/invoices/show.html
+++ b/templates/invoices/show.html
@@ -35,41 +35,23 @@
     <table>
         <thead>
             <tr>
-                <th>
-                    Belopp
-                </th>
-                <th>
-                    Resultatställe
-                </th>
-                <th>
-                    Sekundärt resultatställe
-                </th>
-                <th>
-                    Budgetpost
-                </th>
-                <th>
-                    Attesterad av
-                </th>
+                <th>Belopp</th>
+                <th>Resultatställe</th>
+                <th>Sekundärt resultatställe</th>
+                <th>Budgetpost</th>
+                <th>Attesterad av</th>
             </tr>
         </thead>
         <tbody>
         {% for invoice_part in invoice.invoicepart_set.all %}
             <tr>
-                <td>
-                    <span class="value">{{ invoice_part.amount|intcomma }} kr</span>
-                </td>
-                <td>
-                    {{ invoice_part.secondary_cost_centre }}
-                </td>
-                <td>
-                    <span class="value">{{ invoice_part.secondary_cost_centre }}</span>
-                </td>
-                <td>
-                    <span class="value">{{ invoice_part.budget_line }}</span>
-                </td>
+                <td>{{ invoice_part.amount|intcomma }} kr</td>
+                <td>{{ invoice_part.cost_centre }}</td>
+                <td>{{ invoice_part.secondary_cost_centre }}</td>
+                <td>{{ invoice_part.budget_line }}</td>
                 <td>
                     {% if invoice_part.attested_by %}
-                    <a class="value" href="{% url 'user-show' invoice_part.attested_by.user.username %}">
+                    <a href="{% url 'user-show' invoice_part.attested_by.user.username %}">
                         {{ invoice_part.attested_by.user.get_full_name }} ({{ invoice_part.attest_date }})
                     </a>
                     {% else %}
@@ -82,7 +64,7 @@
                                 </form>
                             </span>
                         {% else %}
-                            <span class="value">Ej attesterad</span>
+                            Ej attesterad
                         {% endif %}
                     {% endif %}
                 </td>
